--- a/Marketing_Customer_Value_Analysis.ipynb
+++ b/Marketing_Customer_Value_Analysis.ipynb
@@ -859,7 +859,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Modeling"
+    "### Modeling - Logistic Regression"
    ]
   },
   {
